# gitlab-emulator

./: .gitignore  Caddyfile  Dockerfile  GITLAB_STATUS.md  Makefile  PLAN.md  README.md  STATUS.md  Vagrantfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
alembic/: env.py
app/: config.py  database.py  main.py
docs/: PLAN.md  ci-pipeline-implementation-plan.md  ci-runner-plan.md  ci-variables-secrets-security-plan.md  compatibility-plan.md  kubernetes-runner-validation-plan.md  operations-runbook.md  remaining-slices.md  runner-deployment-guide.md  runner-testing.md  validation-plan.md
scripts/: ci-lab-smoke.sh  deploy-incluster-k8s-runner.sh  git-integration-test.sh  glab-integration-test.sh  k8s-runner-validation.sh  register-k8s-runner.sh  register-runner.sh  runner-artifact-needs-validation.sh  runner-cache-validation.sh  runner-extends-validation.sh  runner-include-validation.sh  runner-rules-validation.sh  runner-secret-validation.sh  runner-variable-validation.sh
tests/: conftest.py  test_actions_api.py  test_admin.py  test_admin_ci_variables_api.py  test_auth.py  test_branches_api.py  test_check_runs_api.py  test_ci_security.py  test_ci_yaml.py  test_collaborators_api.py  test_comments_api.py  test_commits_api.py  test_contents_api.py  test_database.py  test_deploy_keys_api.py  test_etag.py  test_events_api.py  test_forks_api.py  test_git_data_api.py  test_git_http.py  test_git_integration.py  test_git_refs_api.py  test_gitlab_commits_api.py  test_graphql.py  test_groups_api.py  test_issues_api.py  test_labels_api.py  (+23 more)
(+237 files in other folders)
